jitsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo
          imagePullPolicy: Always
        - name: prosody
          image: jitsi/prosody
          imagePullPolicy: Always
        - name: web
          image: jitsi/web
          imagePullPolicy: Always
        - name: jvb
          image: jitsi/jvb
          imagePullPolicy: Always
