jitsi/jitsi-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb-udp
  namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30300
  selector:
    k8s-app: jitsi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: jitsi
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  - name: "https"
    port: 443
    targetPort: 443
  selector:
    k8s-app: jitsi
